# PolicyReady

./: .cursorrules  .gitignore  .vercelignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
api/: index.py
backend/: requirements.txt
backend/app/: main.py  models.py
backend/app/services/: indexer.py  llm.py  pdf_parser.py  search.py  supabase_storage.py
backend/scripts/: build_index.py
frontend/: env.local.example  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: FileUpload.tsx  HistoryPanel.tsx  PDFPreviewModal.tsx  PolicyBrowser.tsx  ProgressBar.tsx  QuestionCard.tsx
frontend/src/lib/: api.ts  history.ts
frontend/src/types/: index.ts
scripts/: upload_to_supabase.py
